Add readonly inherited vvt & dsfa
- Adds extra column "Inherited by team" to vvt table
- Inherited vvt/dsfa cannot be edited
- Also fetched the related entities from inherited teams like VVTPersonen, VVTRisiken, etc.
- Disable vvt form buttons: duplicate, approve, disable

--- a/translations/general/general.en.yaml
+++ b/translations/general/general.en.yaml
@@ -92,3 +92,6 @@ uuid: UID
 version: Version
 versionApproved: (Diese Version war freigegeben)
 yes: Ja
+inheritance:
+  fromTeam: Inherited from team
+  infoText: This element was transferred by team inheritance und thus is not editable.
