--- a/translations/team/team.fr.yaml
+++ b/translations/team/team.fr.yaml
@@ -45,3 +45,4 @@ dsb:
 footer:
   disclaimer: Um den ODC-Administrations-Bereich nutzen zu können müssen Sie die Rolle "SuperAdmin" besitzen.
   clickHere: Wie man diese Rolle zuweist erfahren sie hier
+backToTeamManagement: Back to team management
