refactor team dropdown

--- a/translations/form.de.yaml
+++ b/translations/form.de.yaml
@@ -63,7 +63,7 @@ question: Fragestellung
 auditTomNumber: Audit-TOM-Nummer
 recommendation:	Empfehlung
 category: Kategorie
-nothingSelected: nichts Ausgewählt
+nothingSelected: Nichts Ausgewählt
 privacyManagement: Datenschutzmanagement
 privacyTemplates: Verbindliche Vorlagen Datenschutz
 instructions: Arbeitsanweisungen
