handle assign error

--- a/translations/base/base.de.yaml
+++ b/translations/base/base.de.yaml
@@ -48,3 +48,4 @@ manageOdc: ODC Einstellungen
 manageTeams: Teams verwalten
 teamAdminArea: Team Adminbereich
 superAdminArea: ODC Adminbereich
+assignError: Die Zuweisung ist fehlgeschlagen. Wenden Sie sich an Ihren Admin wenn das Problem bestehen bleibt.
